CM-244 - update the hostname for local LDAP server in config.properties to allow for multiple managed servers

--- a/cic-app/config.properties
+++ b/cic-app/config.properties
@@ -27,7 +27,7 @@ task.forward.page.url=/JSP/taskforward.jsp
 ldap.path=ou=myrealm,dc=cicdomain
 ldap.admindn=cn=admin
 ldap.password=@cic-admin-ldap-password@
-ldap.host=wlserver1
+ldap.host=@ldap-host@
 ldap.port=7001
 
 #-----------------------#
