CM-250 - use env var for cic-app image in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   wladmin:
     container_name: wladmin
     hostname: wladmin
-    image: 169942020521.dkr.ecr.eu-west-2.amazonaws.com/cic-app
+    image: ${CIC_APP_IMAGE:-cic-app}
     ports:
       - "21001:7001"
     volumes:
@@ -17,7 +17,7 @@ services:
   wlserver1:
     container_name: wlserver1
     hostname: wlserver1
-    image: 169942020521.dkr.ecr.eu-west-2.amazonaws.com/cic-app
+    image: ${CIC_APP_IMAGE:-cic-app}
     ports:
       - "21011:7001"
     volumes:
@@ -31,7 +31,7 @@ services:
   wlserver2:
     container_name: wlserver2
     hostname: wlserver2
-    image: 169942020521.dkr.ecr.eu-west-2.amazonaws.com/cic-app
+    image: ${CIC_APP_IMAGE:-cic-app}
     ports:
       - "21012:7001"
     volumes:
