chenges to work from zip distribution

--- a/cic-apache/Dockerfile
+++ b/cic-apache/Dockerfile
@@ -1,18 +1,24 @@
-FROM ch-oraclelinux as builder
+FROM ch-serverjre as builder
 
-ARG CIC_APACHE_URL=http://release.ch.gov.uk/chips/cics/cic-apache.tar.gz
-
+ARG RELEASE_ARTIFACT=cic-ear-1.0.zip
+ARG CIC_ZIP_URL=http://release.ch.gov.uk/chips/cics/${RELEASE_ARTIFACT}
+ 
 # Download the CIC apache static content file and extract into a builder image
 # This is required as the ch-apache image does not have curl or tar available
-RUN mkdir apache && \
-    curl ${CIC_APACHE_URL} -o apache.tar.gz && \
+RUN mkdir -p apache/CICWEB && \
+    curl ${CIC_ZIP_URL} -o apache/${RELEASE_ARTIFACT}  && \
     cd apache && \
-    tar -xzf ../apache.tar.gz
+    unzip ${RELEASE_ARTIFACT} && \
+    jar xvf cic-ear-1.0.ear cic-web.war  && \
+    mv cic-web.war CICWEB && \
+    cd CICWEB  && \
+    jar xvf cic-web.war --directory CICWEB js/ images/ html/ css/ 
 
 FROM ch-apache
 
 # Add section of Apache config for the CIC app
 COPY cic-http.conf conf
+COPY index.html apache/CICWEB 
 
 # Include the new config in the main config file
 RUN echo "Include conf/cic-http.conf" >> conf/httpd.conf
