--- a/cic-app/Dockerfile
+++ b/cic-app/Dockerfile
@@ -1,6 +1,7 @@
 FROM cic-domain
 
-ARG CIC_EAR_URL=http://release.ch.gov.uk/chips/cics/CIC.ear
+ARG RELEASE_ARTIFACT=cic-ear-1.0.zip
+ARG CIC_ZIP_URL=http://release.ch.gov.uk/chips/cics/${RELEASE_ARTIFACT}
 
 # Copy over the CIC application configuration file
 COPY --chown=weblogic:weblogic config.properties ${DOMAIN_NAME}
@@ -8,9 +9,13 @@ COPY --chown=weblogic:weblogic config.properties ${DOMAIN_NAME}
 # Copy over utility scripts
 COPY --chown=weblogic:weblogic container-scripts container-scripts/
 
-# Download the CIC EAR file into the ${DOMAIN_NAME}/upload directory on the image
-RUN mkdir -p ${DOMAIN_NAME}/upload && \
-    curl ${CIC_EAR_URL} -o ${DOMAIN_NAME}/upload/CIC.ear && \
-    chmod 754 container-scripts/*.sh
+# Download the CIC ZIP file into the ${DOMAIN_NAME}/upload directory on the image
+RUN chmod 754 container-scripts/*.sh && \
+    mkdir -p ${DOMAIN_NAME}/upload && \
+    curl ${CIC_ZIP_URL} -o ${DOMAIN_NAME}/upload/${RELEASE_ARTIFACT}  && \
+    cd ${DOMAIN_NAME}/upload && \
+    unzip ${RELEASE_ARTIFACT} 
+
+COPY --chown=weblogic:weblogic cic-ear-1.0.ear ${DOMAIN_NAME}/upload/CIC.ear
 
 CMD ["bash"]
