Adjust path of built ear

--- a/cic-app/Dockerfile
+++ b/cic-app/Dockerfile
@@ -10,7 +10,7 @@ COPY --chown=weblogic:weblogic container-scripts container-scripts/
 RUN chmod 754 container-scripts/*.sh && \
     mkdir -p ${DOMAIN_NAME}/upload
 
-COPY --chown=weblogic:weblogic ../source-code/cic-ear-*.zip ${DOMAIN_NAME}/upload/cic-ear.zip
+COPY --chown=weblogic:weblogic source-code/cic-ear-*.zip ${DOMAIN_NAME}/upload/cic-ear.zip
 
 RUN cd ${DOMAIN_NAME}/upload && \
     unzip cic-ear.zip && \
