--- a/cic-apache/Dockerfile
+++ b/cic-apache/Dockerfile
@@ -1,15 +1,12 @@
 FROM ch-serverjre as builder
 
-ARG RELEASE_ARTIFACT=cic-ear-1.0.zip
-ARG CIC_ZIP_URL=http://release.ch.gov.uk/chips/cics/${RELEASE_ARTIFACT}
- 
-# Download the CIC apache static content file and extract into a builder image
-# This is required as the ch-apache image does not have curl or tar available
-RUN mkdir -p apache/CICWEB && \
-    curl ${CIC_ZIP_URL} -o apache/${RELEASE_ARTIFACT}  && \
-    cd apache && \
-    unzip ${RELEASE_ARTIFACT} && \
-    jar xvf cic-ear-1.0.ear cic-web.war  && \
+RUN mkdir -p apache/CICWEB
+
+COPY cic-*.zip apache
+
+RUN cd apache && \
+    unzip *.zip && \
+    jar xvf cic-ear-*.ear cic-web.war  && \
     mv cic-web.war CICWEB && \
     cd CICWEB  && \
     jar xvf cic-web.war --directory CICWEB js/ images/ html/ css/ 
