--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   apache:
     hostname: apache
-    image: ${CIC_APACHE_IMAGE:-cic-apache}
+    image: ${CIC_APACHE_IMAGE:-cic-apache:latest}
     ports:
       - "21000:80"
     volumes:
@@ -13,7 +13,7 @@ services:
       - cic-net
   wladmin:
     hostname: wladmin
-    image: ${CIC_APP_IMAGE:-cic-app}
+    image: ${CIC_APP_IMAGE:-cic-app:latest}
     ports:
       - "21001:7001"
     volumes:
@@ -26,7 +26,7 @@ services:
     entrypoint: container-scripts/startAdmin.sh
   wlserver1:
     hostname: wlserver1
-    image: ${CIC_APP_IMAGE:-cic-app}
+    image: ${CIC_APP_IMAGE:-cic-app:latest}
     ports:
       - "21011:7001"
     volumes:
@@ -39,7 +39,7 @@ services:
     entrypoint: container-scripts/setConfigAndStartNM.sh
   wlserver2:
     hostname: wlserver2
-    image: ${CIC_APP_IMAGE:-cic-app}
+    image: ${CIC_APP_IMAGE:-cic-app:latest}
     ports:
       - "21012:7001"
     volumes:
